[package]
name = "examples-rust-slack-kot"
version = "0.1.0"
authors = ["Boi Yamamoto <boiyaa@hotmail.com>"]
edition = "2018"
autobins = false

[dependencies]
aws_lambda_events = "^0.3"
chrono = "^0.4"
jsonwebtoken = "^7"
lambda_runtime = "^0.2"
log = "^0.4"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
serde_qs = "^0.6"
simple_logger = "^1"

[dependencies.reqwest]
version = "^0.10"
default-features = false
features = ["blocking", "json", "rustls-tls"]

[[bin]]
name = "bootstrap"
path = "src/main.rs"
